ceate log directory if not already exists