@@ -1,5 +1,12 @@
 #!/bin/sh
 
+# Set the log dir path
+logsDir=../logs
+gcLogFile=$logsDir/gc.log
+
+# Create the logs directory
+mkdir -p -- "$gcLogFile"
+
 # Should be set in case  not set by env
 #JAVA_HOME=
 
@@ -7,7 +14,7 @@
 JAVA_OPTS="$JAVA_OPTS -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"
 
 # JVM arguments - GC options. using parallel CPU(s) for young gen & concurent mark and sweep for old gen)
-JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC -XX:+UseConcMarkSweepGC –XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:../logs/gc.log -XX:-UseGCLogFileRotation"
+JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:-UseGCLogFileRotation -Xloggc:$gcLogFile"
 
 # JVM arguments - print startup JVM argument
 JAVA_OPTS="$JAVA_OPTS -XX:+PrintCommandLineFlags"
